--- a/GenericHID/generichid/GenericHID.vcproj
+++ b/GenericHID/generichid/GenericHID.vcproj
@@ -1705,6 +1705,13 @@
 							Name="VCCLCompilerTool"
 						/>
 					</FileConfiguration>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
 				</File>
 				<File
 					RelativePath=".\generatedfiles\debug\moc_hiddatathread.cpp"
@@ -2603,6 +2610,13 @@
 					RelativePath=".\generatedfiles\Release\moc_shapescene.cpp"
 					>
 					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
 						Name="Debug|Win32"
 						ExcludedFromBuild="true"
 						>
@@ -3009,6 +3023,14 @@
 			</File>
 			<File
 				RelativePath=".\resources\SwitchIcon.png"
+				>
+			</File>
+			<File
+				RelativePath=".\resources\teensypp.png"
+				>
+			</File>
+			<File
+				RelativePath=".\resources\teensyppicon.png"
 				>
 			</File>
 			<File
