--- a/GenericHID/LUFA 100219/Demos/Device/ClassDriver/Joystick/Joystick.vcproj
+++ b/GenericHID/LUFA 100219/Demos/Device/ClassDriver/Joystick/Joystick.vcproj
@@ -372,6 +372,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="Firmware"
+			>
+			<File
+				RelativePath="..\..\..\..\..\bin\teensypp.hex"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\..\bin\usbkey.hex"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\makefile"
 			>
