--- a/GenericHID/LUFA 100219/Demos/Device/ClassDriver/Joystick/makefile.teensypp2
+++ b/GenericHID/LUFA 100219/Demos/Device/ClassDriver/Joystick/makefile.teensypp2
@@ -151,10 +151,7 @@ SRC =	  Joystick.c						      \
 	  $(LUFA_PATH)/LUFA/Drivers/USB/HighLevel/Events.c            \
 	  $(LUFA_PATH)/LUFA/Drivers/USB/HighLevel/USBInterrupt.c      \
 	  $(LUFA_PATH)/LUFA/Drivers/USB/HighLevel/USBTask.c           \
-	  $(LUFA_PATH)/LUFA/Drivers/USB/HighLevel/ConfigDescriptor.c  \
-	  $(LUFA_PATH)/LUFA/Drivers/USB/Class/Device/HID.c            \
-	  $(LUFA_PATH)/LUFA/Drivers/USB/Class/Host/HID.c              \
-	  $(LUFA_PATH)/LUFA/Drivers/USB/Class/Host/HIDParser.c        \
+	  $(LUFA_PATH)/LUFA/Drivers/USB/HighLevel/ConfigDescriptor.c
 
 
 # List C++ source files here. (C dependencies are automatically generated.)
@@ -306,7 +303,7 @@ SCANF_LIB =
 #SCANF_LIB = $(SCANF_LIB_FLOAT)
 
 
-MATH_LIB = -lm
+#MATH_LIB = -lm
 
 
 # List any extra directories to look for libraries here.
