--- a/GenericHID/LUFA 100219/Demos/Device/ClassDriver/Joystick/makefile.generic16
+++ b/GenericHID/LUFA 100219/Demos/Device/ClassDriver/Joystick/makefile.generic16
@@ -80,7 +80,7 @@ BOARD  = USBKEY
 #     does not *change* the processor frequency - it should merely be updated to
 #     reflect the processor speed set externally so that the code can use accurate
 #     software delays.
-F_CPU = 8000000
+F_CPU = 16000000
 
 
 # Input clock frequency.
@@ -102,7 +102,7 @@ FORMAT = ihex
 
 
 # Target file name (without extension).
-TARGET = usbkey
+TARGET = generic16
 TARGETDIR = ../../../../../bin/
 
 
